--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
+
 services:
   - type: web
-    name: my-django-app
+    name: healthapi
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn myproject.wsgi"
-    dockerfilePath: ./Dockerfile
-    # Add any other configuration needed
+    startCommand: "gunicorn healthapi.wsgi:application"
+    dockerfilePath: ./Dockerfile  # Remove this line if not using Docker
